@@ -1,3 +1,7 @@
+2002-02-16  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* glines.c: #include <config.h> fix.
+	
 2002-02-02  Zbigniew Chyla  <cyba@gnome.pl>
 
 	* glines.c (game_about_callback): Don't try to translate empty string.
